syntax = "proto3";

package pb;

// option go_package = "./pkg/order/pb";
option go_package = "github.com/petersonsalme/pkg/pb";

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
}

message CreateOrderRequest {
    int64 product_id = 1;
    int64 quantity = 2;
    int64 user_id = 3;
}

message CreateOrderResponse {
    int64 status = 1;
    string error = 2;
    int64 id = 3;
}
